# unicode-math-class.wasm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: deploy-pages.yml  make-build.yml  make-publish.yml  make-test.yml
src/: bindings.rs  lib.rs  macros.rs  math_class.rs  my_macros.rs
tests/js/: Makefile  common.js  index.test.js  package-lock.json  package.json
tests/py/: Makefile  requirements.txt
tests/py/tests/: common.py  test_it.py
tests/rs/: Cargo.toml
tests/rs/tests/: test.rs
tests/rs/tests/common/: mod.rs
wit/: world.wit
