[package]
name = "unicode-math-class-wasm"
version = "3.0.0+0.1.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen = { version = "0.16.0", default-features = false, features = [
  "realloc",
] }
unicode-math-class = "=0.1.0"

[lib]
name = "unicode_math_class"
crate-type = ["cdylib"]

[package.metadata.component]
package = "typst-community:unicode-math-class"

[package.metadata.component.dependencies]
